<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_meus_produtos"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/txtMeusProdutos" />

        <item android:id="@+id/nav_minhas_compras"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/txtMinhasCompras" />

        <item android:id="@+id/nav_compartilhar"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/txtCompartilhar" />

        <item android:id="@+id/nav_sair"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/txtSairDoApp" />

    </group>

</menu>
